# MyStealerLab

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.test  Dockerfile.windows  README.md  build.rs
article/: MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_PT.md
challenges/: CHALLENGE_01.md  CHALLENGE_02.md  CHALLENGE_03.md  CHALLENGE_04.md  CHALLENGE_05.md  CHALLENGE_06.md
defenses/detector/: Cargo.toml
defenses/detector/src/: main.rs
docs/: ARCHITECTURE.md  MODULES.md  SETUP.md  TECHNIQUES.md
lab_environment/: Dockerfile.c2  c2_local_test.py  c2_server.py  docker-compose.yml
lab_environment/dns/: Corefile
lab_environment/dns/zones/: lab.local.zone
lab_environment/scripts/: setup_lab.sh
src/: config.rs  lib.rs  main.rs
src/collectors/: browser.rs  clipboard.rs  files.rs  mod.rs  system_info.rs
src/crypto/: aes.rs  mod.rs
src/exfil/: http.rs  local.rs  mod.rs
src/loader/: hydra.rs  mod.rs  watchdog.rs
src/utils/: anti_analysis.rs  anti_debug.rs  evasion.rs  helpers.rs  mod.rs  obfuscated_strings.rs  silent_log.rs
